2025-7-9 更新了字典

--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -3,15 +3,34 @@ prefix: #取得/admin/xxx/getUser 中的admin添加前缀，必须以/结尾
     - "/"
     - ";/"  #CVE-2020-11989
     - "..;/"
-    #白名单 + CVE-2020-1957，/demo/..;/admin/index其中demo为授权路径，admin/index为鉴权路径
+    #白名单 + CVE-2020-1957，/demo/..;/admin/index其中demo为白名单路径，admin/index为鉴权路径
     - "images/..;/"
     - "images;/../"
+    - "js/..;/"
+    - "js;/../"
+    - "pages/..;/"
+    - "pages;/../"
+    - "api/..;/"
+    - "api;/../"
+    - "user/..;/"
+    - "user;/../"
+    - "open/..;/"
+    - "open;/../"
     - "public/..;/"
+    - "public;/../"
     - "static/..;/"
+    - "static;/../"
     - "css/..;/"
+    - "css;/../"
     - "resource/..;/"
+    - "resource;/../"
     #白名单 + CVE-2016-6802，在访问路径前加上/任意目录名/../，即可绕过访问
     - "images/../"
+    - "js/../"
+    - "page/../"
+    - "api/../"
+    - "user/../"
+    - "open/../"
     - "public/../"
     - "static/../"
     - "css/../"
